--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section>
       <h2>PROJECT BUILD</h2>
       <ul>
-        <li><a href="data/Safe4Child_VirtualReality_MetaQuest2-3_Standalone_v1.zip" download>Safe4Child_VirtualReality_MetaQuest2-3_Standalone_v1.zip</a></li>
+        <li><a href="https://drive.google.com/file/d/1l4lTo0mvPpfoPhCGHTNOA6oUGONz6Nru/view?usp=sharing" target="_blank">Safe4Child_VirtualReality_MetaQuest2-3_Standalone_v1.zip</a></li>
           <ul >
             <li><a>See handbook for installation instructions</a></li>
             <li><a>See playthrough video for more information</a></li>
