adding STUDENT THESES

--- a/index.html
+++ b/index.html
@@ -79,10 +79,21 @@
       <p>Stay tuned for updates on research publications related to the Safe4Child Project.</p>
       <ul>
         <li><a href="https://www.tandfonline.com/doi/full/10.1080/13575279.2024.2407085" target="_blank">Kelly et al. 2023. Trauma Informed Interventions to Reduce Seclusion, Restraint and Restrictive Practices Amongst Staff Caring for Children and Adolescents with Challenging Behaviours: A Systematic Review</a></li>
-        <li><a href="https://link.springer.com/article/10.1007/s40653-023-00524-2" target="_blank">Goodwin et. 2024. Staff Experiences of Working with Children and Adolescents Engaging in Behaviours That Challenge in Mental Health and Paediatric Inpatient Environments: A Qualitative Exploratory Study across Four European Countries.</a></li>
+        <li><a href="https://link.springer.com/article/10.1007/s40653-023-00524-2" target="_blank">Goodwin et. 2024. Staff Experiences of Working with Children and Adolescents Engaging in Behaviours That Challenge in Mental Health and Paediatric Inpatient Environments: A Qualitative Exploratory Study across Four European Countries</a></li>
 
       </ul>
     </section>
+
+    <section>
+      <h2>STUDENT THESES</h2>
+      <ul>
+        <li><a href="https://www.theseus.fi/bitstream/handle/10024/869673/Haloila_Lahteenmaki.pdf?sequence=2" target="_blank">"Adverse and Dangerous Situations in Children’s Nursing Care" - Sanni Haloila, Kiia Lähteenmäki</a></li>
+        <li><a href="https://www.theseus.fi/bitstream/handle/10024/875775/Vahter_Eveliina.pdf?sequence=3&isAll" target="_blank">"Traumainformoidut lähestymistavat vaativassa lasten hoitotyössä" - Eveliina Vahter</a></li>
+        <li><a href="data/Thesis Zum_Umgang_BA_geschwärzt.pdf" download>"Zum Umgang mit grenzverletzendem Verhalten von Kindern und Jugendlichen aus traumapädagogischer Perspektive" - Anna Rüppel</a></li>
+
+      </ul>
+    </section>
+
   </main>
 
   <footer>
